<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="ScopeData" Id="{25b6288a-fda2-4310-ba04-f62144c08c07}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	var1 : INT := 100;
	var2 : INT := 250;
	var3 : INT := 575;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>